manifests/base/blog/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zmuda-pro-blog
  name: zmuda-pro-blog-http
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      name: http
  selector:
    app: zmuda-pro-blog
  type: ClusterIP
