manifests/base/blog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zmuda-pro-blog
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - test.zmuda.pro
      secretName: zmuda-pro-blog-test-tls
  rules:
    - host: test.zmuda.pro
      http: &host
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zmuda-pro-blog-http
                port:
                  number: 8080
